# valentine_card

./: .dockerignore  .editorconfig  .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  cliff.toml  default.nix  deny.toml  flake.nix  index.html  release.toml  shell.nix
.cargo/: config.toml
.github/: dependabot.yml
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cd.yml  ci.yml
src/: lib.rs  main.rs  utils.rs
