[package]
name = "valentine"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = '2.1.0'
wasm-bindgen = "0.2"
web-sys = { version = "0.3.72", features = ["Window", "console", "Document", "Element"] }

[lib]
crate-type = ["cdylib"]
