[package]
name = "valentine"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = '3.0.0'
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "console", "Document", "Element"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.git-cliff.git]
conventional_commits = true
commit_parsers = []
filter_commits = false
